# dino-terrasense

./: leap.yaml  leap_binder.py  pyproject.toml
dino_terrasense/: config.py  project_config.yaml
dino_terrasense/utils/: general_utils.py  model_utils.py
model/: dino-1.onnx
